; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_arm-tdep.c__initialize_arm_tdep.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_arm-tdep.c__initialize_arm_tdep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_file = type { i32 }
%struct.cmd_list_element = type { i32 }

@_initialize_arm_tdep.helptext = internal global i8* null, align 8
@bfd_arch_arm = common dso_local global i32 0, align 4
@arm_gdbarch_init = common dso_local global i32 0, align 4
@arm_dump_tdep = common dso_local global i32 0, align 4
@bfd_target_elf_flavour = common dso_local global i32 0, align 4
@arm_elf_osabi_sniffer = common dso_local global i32 0, align 4
@GDB_OSABI_ARM_EABI_V1 = common dso_local global i32 0, align 4
@arm_init_abi_eabi_v1 = common dso_local global i32 0, align 4
@GDB_OSABI_ARM_EABI_V2 = common dso_local global i32 0, align 4
@arm_init_abi_eabi_v2 = common dso_local global i32 0, align 4
@GDB_OSABI_ARM_APCS = common dso_local global i32 0, align 4
@arm_init_abi_apcs = common dso_local global i32 0, align 4
@num_disassembly_options = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"arm\00", align 1
@no_class = common dso_local global i32 0, align 4
@set_arm_command = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [31 x i8] c"Various ARM-specific commands.\00", align 1
@setarmcmdlist = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [9 x i8] c"set arm \00", align 1
@setlist = common dso_local global i32 0, align 4
@show_arm_command = common dso_local global i32 0, align 4
@showarmcmdlist = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [10 x i8] c"show arm \00", align 1
@showlist = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [14 x i8] c"reg-names-std\00", align 1
@.str.5 = private unnamed_addr constant [50 x i8] c"Set the disassembly style.\0AThe valid values are:\0A\00", align 1
@valid_disassembly_styles = common dso_local global i8** null, align 8
@.str.6 = private unnamed_addr constant [9 x i8] c"%s - %s\0A\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"std\00", align 1
@disassembly_style = common dso_local global i8* null, align 8
@current_option = common dso_local global i32 0, align 4
@arm_register_names = common dso_local global i8** null, align 8
@.str.8 = private unnamed_addr constant [22 x i8] c"The default is \22std\22.\00", align 1
@.str.9 = private unnamed_addr constant [19 x i8] c"disassembly-flavor\00", align 1
@set_disassembly_style_sfunc = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [20 x i8] c"set arm disassembly\00", align 1
@.str.11 = private unnamed_addr constant [21 x i8] c"show arm disassembly\00", align 1
@.str.12 = private unnamed_addr constant [13 x i8] c"disassembler\00", align 1
@.str.13 = private unnamed_addr constant [7 x i8] c"apcs32\00", align 1
@var_boolean = common dso_local global i32 0, align 4
@arm_apcs_32 = common dso_local global i32 0, align 4
@.str.14 = private unnamed_addr constant [30 x i8] c"Set usage of ARM 32-bit mode.\00", align 1
@.str.15 = private unnamed_addr constant [31 x i8] c"Show usage of ARM 32-bit mode.\00", align 1
@.str.16 = private unnamed_addr constant [15 x i8] c"set arm apcs32\00", align 1
@.str.17 = private unnamed_addr constant [16 x i8] c"show arm apcs32\00", align 1
@.str.18 = private unnamed_addr constant [67 x i8] c"Set usage of ARM 32-bit mode.  When off, a 26-bit PC will be used.\00", align 1
@.str.19 = private unnamed_addr constant [68 x i8] c"Show usage of ARM 32-bit mode.  When off, a 26-bit PC will be used.\00", align 1
@.str.20 = private unnamed_addr constant [4 x i8] c"fpu\00", align 1
@fp_model_strings = common dso_local global i8** null, align 8
@current_fp_model = common dso_local global i8* null, align 8
@.str.21 = private unnamed_addr constant [252 x i8] c"Set the floating point type.\0Aauto - Determine the FP typefrom the OS-ABI.\0Asoftfpa - Software FP, mixed-endian doubles on little-endian ARMs.\0Afpa - FPA co-processor (GCC compiled).\0Asoftvfp - Software FP with pure-endian doubles.\0Avfp - VFP co-processor.\00", align 1
@set_fp_model_sfunc = common dso_local global i32 0, align 4
@show_fp_model = common dso_local global i32 0, align 4
@.str.22 = private unnamed_addr constant [11 x i8] c"othernames\00", align 1
@class_obscure = common dso_local global i32 0, align 4
@arm_othernames = common dso_local global i32 0, align 4
@.str.23 = private unnamed_addr constant [42 x i8] c"Switch to the next set of register names.\00", align 1
@class_maintenance = common dso_local global i32 0, align 4
@arm_debug = common dso_local global i32 0, align 4
@.str.24 = private unnamed_addr constant [64 x i8] c"Set ARM debugging.  When on, arm-specific debugging is enabled.\00", align 1
@.str.25 = private unnamed_addr constant [65 x i8] c"Show ARM debugging.  When on, arm-specific debugging is enabled.\00", align 1
@setdebuglist = common dso_local global i32 0, align 4
@showdebuglist = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_initialize_arm_tdep() #0 {
  %1 = alloca %struct.ui_file*, align 8
  %2 = alloca i64, align 8
  %3 = alloca %struct.cmd_list_element*, align 8
  %4 = alloca %struct.cmd_list_element*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = load i32, i32* @bfd_arch_arm, align 4
  %12 = load i32, i32* @arm_gdbarch_init, align 4
  %13 = load i32, i32* @arm_dump_tdep, align 4
  %14 = call i32 @gdbarch_register(i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* @bfd_arch_arm, align 4
  %16 = load i32, i32* @bfd_target_elf_flavour, align 4
  %17 = load i32, i32* @arm_elf_osabi_sniffer, align 4
  %18 = call i32 @gdbarch_register_osabi_sniffer(i32 %15, i32 %16, i32 %17)
  %19 = load i32, i32* @bfd_arch_arm, align 4
  %20 = load i32, i32* @GDB_OSABI_ARM_EABI_V1, align 4
  %21 = load i32, i32* @arm_init_abi_eabi_v1, align 4
  %22 = call i32 @gdbarch_register_osabi(i32 %19, i32 0, i32 %20, i32 %21)
  %23 = load i32, i32* @bfd_arch_arm, align 4
  %24 = load i32, i32* @GDB_OSABI_ARM_EABI_V2, align 4
  %25 = load i32, i32* @arm_init_abi_eabi_v2, align 4
  %26 = call i32 @gdbarch_register_osabi(i32 %23, i32 0, i32 %24, i32 %25)
  %27 = load i32, i32* @bfd_arch_arm, align 4
  %28 = load i32, i32* @GDB_OSABI_ARM_APCS, align 4
  %29 = load i32, i32* @arm_init_abi_apcs, align 4
  %30 = call i32 @gdbarch_register_osabi(i32 %27, i32 0, i32 %28, i32 %29)
  %31 = call i32 (...) @get_arm_regname_num_options()
  store i32 %31, i32* @num_disassembly_options, align 4
  %32 = load i32, i32* @no_class, align 4
  %33 = load i32, i32* @set_arm_command, align 4
  %34 = call i32 @add_prefix_cmd(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %32, i32 %33, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i32* @setarmcmdlist, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 0, i32* @setlist)
  %35 = load i32, i32* @no_class, align 4
  %36 = load i32, i32* @show_arm_command, align 4
  %37 = call i32 @add_prefix_cmd(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %35, i32 %36, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i32* @showarmcmdlist, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i32 0, i32* @showlist)
  %38 = call i32 @parse_arm_disassembler_option(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0))
  %39 = call %struct.ui_file* (...) @mem_fileopen()
  store %struct.ui_file* %39, %struct.ui_file** %1, align 8
  %40 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %41 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_unfiltered(%struct.ui_file* %40, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.5, i64 0, i64 0))
  %42 = load i32, i32* @num_disassembly_options, align 4
  %43 = add nsw i32 %42, 1
  %44 = sext i32 %43 to i64
  %45 = mul i64 %44, 8
  %46 = trunc i64 %45 to i32
  %47 = call i8** @xmalloc(i32 %46)
  store i8** %47, i8*** @valid_disassembly_styles, align 8
  store i32 0, i32* %9, align 4
  br label %48

48:                                               ; preds = %91, %0
  %49 = load i32, i32* %9, align 4
  %50 = load i32, i32* @num_disassembly_options, align 4
  %51 = icmp slt i32 %49, %50
  br i1 %51, label %52, label %94

52:                                               ; preds = %48
  %53 = load i32, i32* %9, align 4
  %54 = call i32 @get_arm_regnames(i32 %53, i8** %5, i8** %6, i8*** %7)
  store i32 %54, i32* %8, align 4
  %55 = load i8*, i8** %5, align 8
  %56 = load i8**, i8*** @valid_disassembly_styles, align 8
  %57 = load i32, i32* %9, align 4
  %58 = sext i32 %57 to i64
  %59 = getelementptr inbounds i8*, i8** %56, i64 %58
  store i8* %55, i8** %59, align 8
  %60 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %61 = load i8*, i8** %5, align 8
  %62 = load i8*, i8** %6, align 8
  %63 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_unfiltered(%struct.ui_file* %60, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0), i8* %61, i8* %62)
  %64 = load i8*, i8** %5, align 8
  %65 = call i32 @strcmp(i8* %64, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i64 0, i64 0))
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %90, label %67

67:                                               ; preds = %52
  %68 = load i8*, i8** %5, align 8
  store i8* %68, i8** @disassembly_style, align 8
  %69 = load i32, i32* %9, align 4
  store i32 %69, i32* @current_option, align 4
  store i32 0, i32* %10, align 4
  br label %70

70:                                               ; preds = %84, %67
  %71 = load i32, i32* %10, align 4
  %72 = load i32, i32* %8, align 4
  %73 = icmp slt i32 %71, %72
  br i1 %73, label %74, label %87

74:                                               ; preds = %70
  %75 = load i8**, i8*** %7, align 8
  %76 = load i32, i32* %10, align 4
  %77 = sext i32 %76 to i64
  %78 = getelementptr inbounds i8*, i8** %75, i64 %77
  %79 = load i8*, i8** %78, align 8
  %80 = load i8**, i8*** @arm_register_names, align 8
  %81 = load i32, i32* %10, align 4
  %82 = sext i32 %81 to i64
  %83 = getelementptr inbounds i8*, i8** %80, i64 %82
  store i8* %79, i8** %83, align 8
  br label %84

84:                                               ; preds = %74
  %85 = load i32, i32* %10, align 4
  %86 = add nsw i32 %85, 1
  store i32 %86, i32* %10, align 4
  br label %70

87:                                               ; preds = %70
  %88 = load i32, i32* %9, align 4
  %89 = call i32 @set_arm_regname_option(i32 %88)
  br label %90

90:                                               ; preds = %87, %52
  br label %91

91:                                               ; preds = %90
  %92 = load i32, i32* %9, align 4
  %93 = add nsw i32 %92, 1
  store i32 %93, i32* %9, align 4
  br label %48

94:                                               ; preds = %48
  %95 = load i8**, i8*** @valid_disassembly_styles, align 8
  %96 = load i32, i32* @num_disassembly_options, align 4
  %97 = sext i32 %96 to i64
  %98 = getelementptr inbounds i8*, i8** %95, i64 %97
  store i8* null, i8** %98, align 8
  %99 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %100 = call i32 (%struct.ui_file*, i8*, ...) @fprintf_unfiltered(%struct.ui_file* %99, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.8, i64 0, i64 0))
  %101 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %102 = call i8* @ui_file_xstrdup(%struct.ui_file* %101, i64* %2)
  store i8* %102, i8** @_initialize_arm_tdep.helptext, align 8
  %103 = load %struct.ui_file*, %struct.ui_file** %1, align 8
  %104 = call i32 @ui_file_delete(%struct.ui_file* %103)
  %105 = load i32, i32* @no_class, align 4
  %106 = load i8**, i8*** @valid_disassembly_styles, align 8
  %107 = load i8*, i8** @_initialize_arm_tdep.helptext, align 8
  %108 = call %struct.cmd_list_element* @add_set_enum_cmd(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.9, i64 0, i64 0), i32 %105, i8** %106, i8** @disassembly_style, i8* %107, i32* @setlist)
  store %struct.cmd_list_element* %108, %struct.cmd_list_element** %3, align 8
  %109 = load %struct.cmd_list_element*, %struct.cmd_list_element** %3, align 8
  %110 = load i32, i32* @set_disassembly_style_sfunc, align 4
  %111 = call i32 @set_cmd_sfunc(%struct.cmd_list_element* %109, i32 %110)
  %112 = load %struct.cmd_list_element*, %struct.cmd_list_element** %3, align 8
  %113 = call i32 @deprecate_cmd(%struct.cmd_list_element* %112, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.10, i64 0, i64 0))
  %114 = load %struct.cmd_list_element*, %struct.cmd_list_element** %3, align 8
  %115 = call %struct.cmd_list_element* @add_show_from_set(%struct.cmd_list_element* %114, i32* @showlist)
  %116 = call i32 @deprecate_cmd(%struct.cmd_list_element* %115, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.11, i64 0, i64 0))
  %117 = load i32, i32* @no_class, align 4
  %118 = load i8**, i8*** @valid_disassembly_styles, align 8
  %119 = load i8*, i8** @_initialize_arm_tdep.helptext, align 8
  %120 = call %struct.cmd_list_element* @add_set_enum_cmd(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.12, i64 0, i64 0), i32 %117, i8** %118, i8** @disassembly_style, i8* %119, i32* @setarmcmdlist)
  store %struct.cmd_list_element* %120, %struct.cmd_list_element** %3, align 8
  %121 = load %struct.cmd_list_element*, %struct.cmd_list_element** %3, align 8
  %122 = load i32, i32* @set_disassembly_style_sfunc, align 4
  %123 = call i32 @set_cmd_sfunc(%struct.cmd_list_element* %121, i32 %122)
  %124 = load %struct.cmd_list_element*, %struct.cmd_list_element** %3, align 8
  %125 = call %struct.cmd_list_element* @add_show_from_set(%struct.cmd_list_element* %124, i32* @showarmcmdlist)
  %126 = load i32, i32* @no_class, align 4
  %127 = load i32, i32* @var_boolean, align 4
  %128 = call i32 @add_setshow_cmd_full(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.13, i64 0, i64 0), i32 %126, i32 %127, i8* bitcast (i32* @arm_apcs_32 to i8*), i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.14, i64 0, i64 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.15, i64 0, i64 0), i32* null, i32* null, i32* @setlist, i32* @showlist, %struct.cmd_list_element** %3, %struct.cmd_list_element** %4)
  %129 = load %struct.cmd_list_element*, %struct.cmd_list_element** %3, align 8
  %130 = call i32 @deprecate_cmd(%struct.cmd_list_element* %129, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.16, i64 0, i64 0))
  %131 = load %struct.cmd_list_element*, %struct.cmd_list_element** %4, align 8
  %132 = call i32 @deprecate_cmd(%struct.cmd_list_element* %131, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.17, i64 0, i64 0))
  %133 = load i32, i32* @no_class, align 4
  %134 = call i32 @add_setshow_boolean_cmd(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.13, i64 0, i64 0), i32 %133, i32* @arm_apcs_32, i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str.19, i64 0, i64 0), i32* null, i32* null, i32* @setarmcmdlist, i32* @showarmcmdlist)
  %135 = load i32, i32* @no_class, align 4
  %136 = load i8**, i8*** @fp_model_strings, align 8
  %137 = call %struct.cmd_list_element* @add_set_enum_cmd(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.20, i64 0, i64 0), i32 %135, i8** %136, i8** @current_fp_model, i8* getelementptr inbounds ([252 x i8], [252 x i8]* @.str.21, i64 0, i64 0), i32* @setarmcmdlist)
  store %struct.cmd_list_element* %137, %struct.cmd_list_element** %3, align 8
  %138 = load %struct.cmd_list_element*, %struct.cmd_list_element** %3, align 8
  %139 = load i32, i32* @set_fp_model_sfunc, align 4
  %140 = call i32 @set_cmd_sfunc(%struct.cmd_list_element* %138, i32 %139)
  %141 = load %struct.cmd_list_element*, %struct.cmd_list_element** %3, align 8
  %142 = call %struct.cmd_list_element* @add_show_from_set(%struct.cmd_list_element* %141, i32* @showarmcmdlist)
  %143 = load i32, i32* @show_fp_model, align 4
  %144 = call i32 @set_cmd_sfunc(%struct.cmd_list_element* %142, i32 %143)
  %145 = load i32, i32* @class_obscure, align 4
  %146 = load i32, i32* @arm_othernames, align 4
  %147 = call %struct.cmd_list_element* @add_com(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.22, i64 0, i64 0), i32 %145, i32 %146, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.23, i64 0, i64 0))
  %148 = call i32 @deprecate_cmd(%struct.cmd_list_element* %147, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.10, i64 0, i64 0))
  %149 = load i32, i32* @class_maintenance, align 4
  %150 = call i32 @add_setshow_boolean_cmd(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %149, i32* @arm_debug, i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.24, i64 0, i64 0), i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.25, i64 0, i64 0), i32* null, i32* null, i32* @setdebuglist, i32* @showdebuglist)
  ret void
}

declare dso_local i32 @gdbarch_register(i32, i32, i32) #1

declare dso_local i32 @gdbarch_register_osabi_sniffer(i32, i32, i32) #1

declare dso_local i32 @gdbarch_register_osabi(i32, i32, i32, i32) #1

declare dso_local i32 @get_arm_regname_num_options(...) #1

declare dso_local i32 @add_prefix_cmd(i8*, i32, i32, i8*, i32*, i8*, i32, i32*) #1

declare dso_local i32 @parse_arm_disassembler_option(i8*) #1

declare dso_local %struct.ui_file* @mem_fileopen(...) #1

declare dso_local i32 @fprintf_unfiltered(%struct.ui_file*, i8*, ...) #1

declare dso_local i8** @xmalloc(i32) #1

declare dso_local i32 @get_arm_regnames(i32, i8**, i8**, i8***) #1

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @set_arm_regname_option(i32) #1

declare dso_local i8* @ui_file_xstrdup(%struct.ui_file*, i64*) #1

declare dso_local i32 @ui_file_delete(%struct.ui_file*) #1

declare dso_local %struct.cmd_list_element* @add_set_enum_cmd(i8*, i32, i8**, i8**, i8*, i32*) #1

declare dso_local i32 @set_cmd_sfunc(%struct.cmd_list_element*, i32) #1

declare dso_local i32 @deprecate_cmd(%struct.cmd_list_element*, i8*) #1

declare dso_local %struct.cmd_list_element* @add_show_from_set(%struct.cmd_list_element*, i32*) #1

declare dso_local i32 @add_setshow_cmd_full(i8*, i32, i32, i8*, i8*, i8*, i32*, i32*, i32*, i32*, %struct.cmd_list_element**, %struct.cmd_list_element**) #1

declare dso_local i32 @add_setshow_boolean_cmd(i8*, i32, i32*, i8*, i8*, i32*, i32*, i32*, i32*) #1

declare dso_local %struct.cmd_list_element* @add_com(i8*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
